# Topological-MCTS-ARC

./: Kishore-Action-List.md  README.md  legacy.ipynb  pyproject.toml  requirements.txt  run_ablation.py  test_complex.py
experiments/: run_baselines.py  run_curriculum.py  run_transfer.py
notebooks/: legacy.ipynb
src/topomcts/: __init__.py  complex.py  datasets.py  game.py  legacy_port.py  mcts.py
srs/topomcts/: invariants.py  meta.py  metrics.py
tests/: test_mcts.py
